src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Tektur:wght@700;800&display=swap');

/*font-family: 'Tektur', cursive; */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    scroll-behavior: smooth;
}

/* Default background set */
body {
    font-family: 'Roboto', sans-serif;
    background: linear-gradient(180deg, #000, #184671);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
}

header {
    padding: 5px 25px;
    background-color: #00000099;
    position: sticky;
    top: 0;
}

.navbar {
    max-width: 1350px;
    margin: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo a img {
    width: 60px;
    padding-top: 5px;
    padding-bottom: 2px;
}

nav ul {
    display: flex;
}

nav ul li {
    margin-left: 35px;
}

nav ul li a {
    font-weight: 300;
    font-size: 18px;
    letter-spacing: 1px;
    transition: all .3s;
    color: #fff;
    position: relative;
}

nav ul li a:hover {
    color: #3b89ff;
}

nav ul li a::after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: -4px;
    left: 0;
    background-color: #639bef;
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
}

nav ul li a:hover::after {
    transform: scaleX(1);
    transform-origin: bottom left;
}

.menu-icon {
    display: none;
}

.nav-icon {
    color: #fff;
    font-size: 25px;
}

@media screen and (max-width: 950px) {
    nav {
        position: absolute;
        top: 0;
        right: 0;
        height: 100vh;
        width: 65%;
        background-color: #061d32;
        transform: translateX(100%);
        transition: all .2s;
    }

    nav.active {
        transform: translateX(0);
    }

    nav ul {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        margin: 20px 0px;
        margin-top: 40px;
        padding: 20px;
    }

    nav ul li {
        margin: 20px 0px;
    }

    .menu-icon {
        display: block;
        z-index: 99;
    }

    .open-menu {
        display: block;
    }

    .close-menu {
        display: none;
    }

    .active.close-menu {
        display: block;
    }

    .active.open-menu {
        display: none;
    }
}

